fixed alignment issus

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -403,6 +403,7 @@ i._mi.fa.fa-linkedin {
 }
 .case-study-archive .case-study-img {
   width: 60%;
+  text-align: center;
 }
 .case-study-sidebar {
 	width: 40%;
